tests/invalid/runtime/index_get_string_oob_combining.pts
import Io;

function main() : void {
    string s = "é";
    glyph g = s[2];
    Io.printLine(g.toString());
}
